--- a/index.html
+++ b/index.html
@@ -1184,8 +1184,8 @@
     </style>
                                               
     <div class="kaisar303">
-    <a href="https://xvpn.online/kaisar303/" rel="nofollow noreferrer" class="register">DAFTAR kaisar303</a>
-    <a href="https://xvpn.online/kaisar303/" rel="nofollow noreferrer" class="login">LOGIN kaisar303</a>
+    <a href="https://permainshort.link/kaisar303" rel="nofollow noreferrer" class="register">DAFTAR kaisar303</a>
+    <a href="https://permainshort.link/kaisar303" rel="nofollow noreferrer" class="login">LOGIN kaisar303</a>
     </div>
     <br>
 
@@ -1319,7 +1319,7 @@
     class="ProductItem-details-checkout">
 
      <div>
-      <a href="https://xvpn.online/kaisar303/" title="kaisar303">
+      <a href="https://permainshort.link/kaisar303" title="kaisar303">
       <img src="https://i.postimg.cc/K84dx1Zs/daftar-slot-gacor.webp" alt="kaisar303" style="display: block; margin-left: auto; margin-right: auto;" data-mce-fragment="1" data-mce-src="https://i.postimg.cc/K84dx1Zs/daftar-slot-gacor.webp">
     </a>                              
     </div>
