--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="canonical" href="https://kaisar303.pages.dev/"/>
 <meta property="og:site_name" content="kaisar303"/>
 <meta name="google-site-verification" content="-F2DobCbGOudXZlQAcAYpCwhtGzF5j_rzl7x7GpmrUg" />
-<link rel="amphtml" href="http://ampkaisar.xyz/">
+<link rel="amphtml" href="https://webbuilder.click/site-ksr/">
 <meta property="og:title" content="kaisar303 🍁 Link Daftar Kaisar303 Situs Slot Gacor Maxwin Hari Ini Terbaik Dan Resmi Gampang Menang"/>
 <meta property="og:url" content="https://kaisar303.pages.dev/"/>
 <meta property="og:type" content="product"/>
